[gd_scene load_steps=3 format=2]

[ext_resource path="res://controls/Keyboard2x2.gd" type="Script" id=1]
[ext_resource path="res://controls/GameButton.tscn" type="PackedScene" id=2]

[node name="Keyboard2x2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 90
custom_constants/margin_top = 90
custom_constants/margin_left = 90
custom_constants/margin_bottom = 90

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 90.0
margin_top = 90.0
margin_right = 530.0
margin_bottom = 530.0
custom_constants/separation = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 440.0
margin_bottom = 200.0
custom_constants/separation = 40

[node name="GameButton1" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 200.0

[node name="GameButton2" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_right = 440.0
margin_bottom = 200.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 440.0
margin_bottom = 440.0
custom_constants/separation = 40

[node name="GameButton3" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 200.0

[node name="GameButton4" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_right = 440.0
margin_bottom = 200.0
